# SMA

./: pyproject.toml  sma.ipynb
